# education-app

./: README.md
04.10.24edutgapp - Copy/: FiniteStateMachine.py  attendance_data.py  buttons.py  main.py  pyproject.toml  windows.py
04.10.24edutgapp - Copy/database/: engine.py  requests.py
edutgapp/: FSM.py  FiniteStateMachine.py  action.py  buttons.py  main.py  pd.py  pyproject.toml  windows.py  winds.py
edutgapp/Attendance/: attendance_excel.py  attendance_msg.py
edutgapp/database/: engine.py  requests.py
edutgapp/dialogs/attendace/: getters.py  handlers.py  window.py
edutgapp/dialogs/attendance/: window.py
edutgapp/dialogs/group/: getters.py  handlers.py  window.py
edutgapp/dialogs/level/: handlers.py  window.py
edutgapp/dialogs/student/: getters.py  handlers.py  window.py
